ldap search interface for user entries, server part